[metadata]
name = ProxyPatternPool
version = 0.1
author = Fabien Coelho
author_email = proxy.pool@coelho.net
url = https://github.com/zx80/proxy-pattern-pool
description = Generic Proxy and Pool Classes for Python
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python
    Environment :: Web Environment
    Framework :: Flask
    Topic :: Software Development :: Libraries :: Python Modules

[options]
py_modules =
    ProxyPatternPool
# install_requires =
